<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_vfh_controller</name>
  <version>0.9.0</version>
  <description>
    Vector Field Histogram Plus (VFH+) local controller for Nav2
    (nav2_core::Controller). A reactive histogram-based obstacle-avoidance
    controller: it builds a polar histogram of obstacles around the robot and
    steers toward the free angular sector best aligned with the goal. Upstream
    Nav2 has no VFH controller (it ships DWB, MPPI, Regulated Pure Pursuit). Part
    of nav2_experimental_planner: planners not in upstream Nav2.
  </description>

  <maintainer email="rsasaki0109@gmail.com">Ryohei Sasaki</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/nav2_vfh_controller_plugin.xml" />
  </export>
</package>
